# crates.io-duplicates

./: Cargo.toml  README.md
src/: main.rs
